<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.louxiantuo.graduation.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="宁波奉化双拓塑料制品厂设备智能控制系统"
            android:gravity="center_horizontal"
            android:textSize="18dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="编号"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="名称"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="联网"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="开启"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="关闭"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="工作"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="100g塑机"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/WifiState1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/TurnOn1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/on1"
            />

        <Button
            android:id="@+id/TurnOff1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/off1"
            />



        <TextView
            android:id="@+id/MachineState1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="160g塑机"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/WifiState2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/TurnOn2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/on2"
            />

        <Button
            android:id="@+id/TurnOff2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/off2"
            />



        <TextView
            android:id="@+id/MachineState2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="200g塑机"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/WifiState3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/TurnOn3"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/on3"
            />

        <Button
            android:id="@+id/TurnOff3"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/off3"
            />



        <TextView
            android:id="@+id/MachineState3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="320g塑机"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/WifiState4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/TurnOn4"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/on4"
            />

        <Button
            android:id="@+id/TurnOff4"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/off4"
            />



        <TextView
            android:id="@+id/MachineState4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="400g塑机"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/WifiState5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/TurnOn5"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/on5"
            />

        <Button
            android:id="@+id/TurnOff5"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="@string/off5"
            />



        <TextView
            android:id="@+id/MachineState5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="6"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="大塑机"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/WifiState6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/TurnOn6"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="on6"
            />

        <Button
            android:id="@+id/TurnOff6"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="off6"
            />



        <TextView
            android:id="@+id/MachineState6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="7"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="水泵"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/WifiState7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/TurnOn7"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="on7"
            />

        <Button
            android:id="@+id/TurnOff7"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="off7"
            />



        <TextView
            android:id="@+id/MachineState7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="8"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="气泵"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/WifiState8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/TurnOn8"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="on8"
            />

        <Button
            android:id="@+id/TurnOff8"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="off8"
            />



        <TextView
            android:id="@+id/MachineState8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="9"
            android:gravity="center_horizontal"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="冷却风扇"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/WifiState9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/TurnOn9"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="on9"
            />

        <Button
            android:id="@+id/TurnOff9"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="3"
            android:text="off9"
            />



        <TextView
            android:id="@+id/MachineState9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>






</LinearLayout>
